--- a/index.html
+++ b/index.html
@@ -16,47 +16,30 @@
 
 <body>
     <header class="header">
-
-        <button id="inicio">Inicio</button>
-        <button class="peliculas" id="btn-grad">Mostrar Películas</button>
-        <button class="series" id="btn-grad">Mostrar Series</button>
-        <button class="pelicula" id="btn-grad">Mostrar Película Aleatoria</button>
-        <button class="serie" id="btn-grad">Mostrar Serie Aleatoria</button>
-        <div class="barra-busqueda">
-            <input type="text" id="busqueda-input" placeholder="Buscar por nombre">
-        </div>
-
+        <select id="dropdown-menu" class="dropdown-menu">
+            <option value="peliculas">Mostrar Películas</option>
+            <option value="series">Mostrar Series</option>
+            <option value="pelicula">Mostrar Película Aleatoria</option>
+            <option value="serie">Mostrar Serie Aleatoria</option>
+        </select>
     </header>
 
     <main>
         <section data-name="peliculas" class="section" id="peliculas">
-            <h2>
-                Películas
-            </h2>
-
-
+            <h2>Películas</h2>
         </section>
 
         <section data-name="series" class="section">
-            <h2>
-                Series
-            </h2>
-
+            <h2>Series</h2>
         </section>
 
         <section data-name="pelicula" class="hidden">
-            <h2>
-                Película aleatoria
-            </h2>
+            <h2>Película aleatoria</h2>
         </section>
 
         <section data-name="serie" class="hidden">
-            <h2>
-                Serie aleatoria
-            </h2>
+            <h2>Serie aleatoria</h2>
         </section>
-
-        
     </main>
     <script src="./scripts/index.js" type="module"></script>
 </body>
