--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <header class="header">
         <select id="dropdown-menu" class="dropdown-menu">
-            <option value="peliculas">Mostrar Películas</option>
-            <option value="series">Mostrar Series</option>
-            <option value="pelicula">Mostrar Película Aleatoria</option>
-            <option value="serie">Mostrar Serie Aleatoria</option>
+            <option value="peliculas">Películas</option>
+            <option value="series">Series</option>
+            <option value="pelicula">Película Aleatoria</option>
+            <option value="serie">Serie Aleatoria</option>
         </select>
     </header>
 
