--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="icon" type="image/png" href="icon.png">
     <title>Películas y series para ver</title>
 </head>
 
